--- a/app/design/frontend/rwd/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/rwd/default/template/newsletter/subscribe.phtml
@@ -26,7 +26,7 @@
 ?>
 <div class="block block-subscribe">
     <div class="block-title">
-        <strong><span><?php echo $this->__('Newsletter') ?></span></strong>
+        <strong><span><?php echo $this->__('Sign Up So We Can Bug You About New Skeleton Shit!') ?></span></strong>
     </div>
     <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail">
         <div class="block-content">
