--- a/skin/frontend/rwd/default/css/styles.css
+++ b/skin/frontend/rwd/default/css/styles.css
@@ -537,7 +537,7 @@ h2, .h2 {
   margin: 0;
   margin-bottom: 0.5em;
   color: black;
-  font-family: "Rosewood Std", "Helvetica Neue", Verdana, Arial, sans-serif;
+  font-family: "Helvetica Neue", Verdana, Arial, sans-serif;
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
