--- a/app/design/frontend/rwd/default/template/page/print.phtml
+++ b/app/design/frontend/rwd/default/template/page/print.phtml
@@ -40,6 +40,7 @@
 
 <head>
 <?php echo $this->getChildHtml('head') ?>
+<?php echo "Hello world."; ?>
 </head>
 <body class="page-print<?php echo $this->getBodyClass()?$this->getBodyClass():'' ?>">
 <div>
