--- a/app/design/frontend/base/default/template/page/html/head.phtml
+++ b/app/design/frontend/base/default/template/page/html/head.phtml
@@ -39,6 +39,7 @@
 //]]>
 </script>
 <![endif]-->
+<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('zone_global_css')->toHtml() ?>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
